Fix scrollbars hiding in Chrome/Android 4.4
Fix #2962

--- a/styles/mobile/common/base.less
+++ b/styles/mobile/common/base.less
@@ -243,7 +243,7 @@
 
 .km-native-scroller
 {
-    overflow: scroll;
+    overflow: auto;
     -webkit-overflow-scrolling: touch;
     -ms-touch-action: pan-x pan-y;
     -ms-overflow-style: -ms-autohiding-scrollbar;
